--- a/notebooks/boston.ipynb
+++ b/notebooks/boston.ipynb
@@ -2,11 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda/lib/python2.7/site-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "from hyperopt import hp\n",
     "from sklearn.datasets import load_boston\n",
@@ -67,13 +76,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'evals': [(<xgboost.core.DMatrix object at 0x7ff1fa464b10>, 'train')], 'num_boost_round': 192, 'params': {'subsample': 0.55, 'colsample_by_tree': 0.35000000000000003, 'eta': 0.1, 'max_depth': 4, 'min_child_weight': 1.3}, 'early_stopping_rounds': 50, 'verbose_eval': False}\n"
+      "{'evals': [(<xgboost.core.DMatrix object at 0x7fb4553a8d10>, 'train')], 'num_boost_round': 223, 'params': {'subsample': 0.7000000000000001, 'colsample_by_tree': 0.35000000000000003, 'eta': 0.1, 'max_depth': 4, 'min_child_weight': 1.3}, 'early_stopping_rounds': 50, 'verbose_eval': False}\n"
      ]
     }
    ],
    "source": [
-    "pscv = model_selection.ParamSearchCV(param_space=param_space, num_evals=50, cv_metric=\"mae\",\n",
-    "                                     fit_params=fit_params, cv_params=cv_params)\n",
+    "pscv = model_selection.ParamOptimizeCV(param_space=param_space, num_evals=25, cv_metric=\"mae\",\n",
+    "                                       fit_params=fit_params, cv_params=cv_params)\n",
     "pscv.fit(dtrain)\n",
     "print pscv.fit_params\n",
     "y_hat_gbm = pscv.predict(dtest)"
@@ -94,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -103,8 +112,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GBM loss: 2.35\n",
-      "RF loss: 2.39\n"
+      "GBM loss: 1.90\n",
+      "RF loss: 2.05\n"
      ]
     }
    ],
